--- a/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
+++ b/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
@@ -8,4 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\GClef.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\GClef.png" />
+  </ItemGroup>
+
 </Project>
