--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Clear
       run: dotnet clean && dotnet nuget locals all --clear
 
+    - name: Install dependencies
+      run: dotnet restore
+  
     - name: Build
       run: dotnet build -o "build/${{ matrix.configuration }}" -c "${{ matrix.configuration }}" /p:SourceRevisionId="${{ steps.git_short_hash.outputs.result }}"
 
@@ -50,6 +53,6 @@ jobs:
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v3
       with:
-        name: dotnet-results-${{ matrix.configuration }}
+        name: TestResults-${{ matrix.configuration }}
         path: TestResults-${{ matrix.configuration }}
       if: ${{ always() }}
