Set icon and changed game modes

--- a/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
+++ b/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
@@ -8,4 +8,20 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="View\icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="View\icon.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="View\icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
