--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Get git short hash
       id: git_short_hash
-      run: echo "result=$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_OUTPUT
+      run: echo "result=$(git rev-parse --short "${{ github.sha }})"" >> $GITHUB_OUTPUT
       shell: bash
       
     - name: Clear
@@ -123,5 +123,6 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
+          VALIDATE_GITHUB_ACTIONS: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
