--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,15 +30,17 @@ jobs:
 
     - name: Get git short hash
       id: git_short_hash
-      run: echo "result=$(git rev-parse --short "${{ github.sha }})"" >> $GITHUB_OUTPUT
       shell: bash
-      
+      run: |
+        SHORT_HASH = git rev-parse --short "${{ github.sha }}"
+        echo "result=$SHORT_HASH" >> $GITHUB_OUTPUT
+
     - name: Clear
       run: dotnet clean && dotnet nuget locals all --clear
 
     - name: Install dependencies
       run: dotnet restore
-  
+
     - name: Build
       run: dotnet build -o "build/${{ matrix.configuration }}" -c "${{ matrix.configuration }}" /p:SourceRevisionId="${{ steps.git_short_hash.outputs.result }}"
 
@@ -123,6 +125,5 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          VALIDATE_GITHUB_ACTIONS: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
