--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       id: git_short_hash
       shell: bash
       run: |
-        SHORT_HASH = git rev-parse --short "${{ github.sha }}"
+        SHORT_HASH=$(git rev-parse --short "${{ github.sha }}")
         echo "result=$SHORT_HASH" >> $GITHUB_OUTPUT
 
     - name: Clear
