--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,7 @@ jobs:
     - name: Get git short hash
       id: git_short_hash
       shell: bash
-      run: |
-        SHORT_HASH=$(git rev-parse --short "${{ github.sha }}")
-        echo "result=$SHORT_HASH" >> $GITHUB_OUTPUT
+      run: git rev-parse --short "${{ github.sha }}"
 
     - name: Clear
       run: dotnet clean && dotnet nuget locals all --clear
