--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
 
   build:
     name: Build (${{ matrix.configuration }})
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
 
     strategy:
       matrix:
@@ -60,6 +61,7 @@ jobs:
 
   analyze:
     name: Analyze with SonarCloud
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     needs: [build]
 
     runs-on: windows-latest
@@ -112,6 +114,7 @@ jobs:
 
   lint:
     name: Lint Code Base
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     runs-on: ubuntu-latest
 
     steps:
