Set About window, fixed launcher design.

--- a/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
+++ b/PTI-Ear-Trainer/PTI-Ear-Trainer.csproj
@@ -14,12 +14,14 @@
 
   <ItemGroup>
     <None Remove="View\icon.ico" />
+    <None Remove="View\logo.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="View\icon.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="View\logo.png" />
   </ItemGroup>
 
   <ItemGroup>
