--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Zip artifact
       shell: bash
-      run: cd release; zip "../PTI Ear Trainer.zip" *
+      run: cd release; zip "../PTI Ear Trainer.zip" .
       
     - name: Bump version and push tag
       id: tag_version
