--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Zip artifact
       shell: bash
-      run: cd release; zip "../PTI Ear Trainer.zip" .
+      run: cd release; zip "../PTI-Ear-Trainer.zip" .
       
     - name: Bump version and push tag
       id: tag_version
@@ -51,4 +51,4 @@ jobs:
       with:
         tag_name: ${{ steps.tag_version.outputs.new_tag }}
         generate_release_notes: true
-        files: "PTI Ear Trainer.zip"
+        files: "PTI-Ear-Trainer.zip"
