--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,17 +35,16 @@ jobs:
       run: dotnet test -c Release
 
     - name: Zip artifact
-      shell: bash
-      run: cd release; zip "../PTI-Ear-Trainer.zip" .
-      
+      shell: powershell
+      run: Compress-Archive -Path release\* -DestinationPath PTI-Ear-Trainer.zip
+
     - name: Bump version and push tag
       id: tag_version
-      uses: anothrNick/github-tag-action@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: minor
-        WITH_V: true
-    
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        default_bump: minor
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Create release
       uses: softprops/action-gh-release@v1
       with:
